# MotecTelemetryExporter

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
backend/src/motec_exporter/: __init__.py  app.py  channel_chart_store.py  channels.py  config.py  datalog.py  db.py  exporter.py  live.py  local_kafka.py  models.py  motec_ld.py  replay.py  sample_data.py  split.py  telemetry.py  track_store.py
backend/tests/: test_channel_chart_store.py  test_datalog.py  test_db_guard.py  test_exporter.py  test_local_kafka.py  test_motec_ld.py  test_split.py  test_timezone_ranges.py  test_track_store.py
channel_charts/: angelique-channel-chart-04-14-26.json  orion-default.json
docs/: PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
simulator/: index.html  package-lock.json  package.json
simulator/src/: App.tsx  styles.css
tracks/: new-track.json  orion-shitter.json  orion-shitter2.json  orion-test-track.json
