[project]
name = "motec-telemetry-exporter"
version = "0.1.0"
description = "Local read-only Orion telemetry to MoTeC exporter"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
  "kafka-python>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/motec_exporter"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
